<resources>
    <string name="app_name">Ready For Summer</string>
    <string name="records_text">My record:</string>
    <string name="date_text">Date: </string>
    <string name="repeat_text">Reps: </string>
    <string name="weight_text">Weight: </string>
    <string name="date_value">01.01.2001</string>
    <string name="repeat_value">0</string>
    <string name="weight_value">0</string>
    <string name="title_of_exercise">Lorem ipsum dolor sit amet.</string>
    <string name="description_of_exercise">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dicta dignissimos, dolor dolore ex illo in, nulla omnis perspiciatis provident quam qui quidem reiciendis reprehenderit sit sunt unde voluptatem voluptatum?</string>
    <string name="repeat_seek_bar_caption">Current number of reps:</string>
    <string name="weight_edit_text_caption">Current weight:</string>
    <string name="save_record_button_text">Save</string>
    <string name="repeat_counter">25</string>
    <string name="weight_edit_text">0</string>
    <string name="menu_item_share">Share</string>
</resources>
