<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"

    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/repeatLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repeatSeekBarCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/repeat_seek_bar_caption" />

                <TextView
                    android:id="@+id/repeatCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/repeat_counter" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/repeatSeekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:max="10"
                android:progress="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_below="@id/repeatLayout"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/weightEditTextCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_edit_text_caption" />

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:text="@string/weight_edit_text"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>